feat : 모니터링 로그 api 구조화
